fixed bug where horizontal scrollbar would appear when the game was finished.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   /* max-width: 1280px; */
-  width: 100vw;
+  /* width: 100vw; */
   margin: 0 auto;
   text-align: center;
 
